[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolutiontree"
version = "0.1.0a1"
description = "Systematic exploration of clustering resolutions in single-cell analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joe Hou", email = "joseph.houjue@gmail.com"},
]
keywords = ["single-cell", "clustering", "resolution", "scanpy", "leiden", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[project.urls]
Homepage = "https://github.com/joe-jhou2/resolutiontree"
Repository = "https://github.com/joe-jhou2/resolutiontree"
"Bug Tracker" = "https://github.com/joe-jhou2/resolutiontree/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["resolutiontree*"]

[tool.setuptools.package-dir]
"" = "src"
[tool.poetry.dependencies]
numpy = ">=1.19.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
seaborn = ">=0.11.0"
scanpy = ">=1.8.0"
anndata = ">=0.8.0"
igraph = ">=0.9.0"
networkx = ">=2.6.0"
leidenalg = ">=0.8.0"
umap-learn = ">=0.5.0"
